<resources>
    <string name="app_name">大杂烩(原东北大乱炖)</string>
    <string name="action_settings">Settings</string>
    <string name="patchWork_first_but_text">点击体验大杂烩!</string>
    <string name="welcome_cn">欢迎您使用大杂烩</string>
    <string name="welcome_en">Thank you for using Patchwork</string>
    <string name="welcome_read">看文章</string>
    <string name="welcome_food">赏美食</string>
    <string name="welcome_All_rights">此应用仅作为交流使用,请勿用于商业用途,后果与作者无关</string>
    <string name="welcome_Select">点击图片选择您需要的内容</string>
    <string name="loding">正在加载中.....</string>
    <string name="happy_popular">人气</string>
    <string name="happy_new">最新</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="person_center">个人中心</string>
    <string name="dimen_recommend">推荐者</string>
    <string name="collect">我的收藏</string>
    <string name="clear">清除缓存</string>
    <string name="push">推送设置</string>
    <string name="wifi">非WiFi下使用省流量模式</string>
    <string name="about">关于此应用</string>
    <string name="out">退出登陆</string>
    <string name="loading">正在加载中....</string>
    <string name="title_name">提示信息</string>
    <string name="waite">敬请期待</string>
    <string name="forget">作者:forget</string>
    <string name="face_me">访问作者博客</string>
    <string name="close">关闭</string>
    <string name="news">新闻</string>
    <string name="home">首页</string>
    <string name="happy">开心</string>
    <string name="about_menu">个人中心</string>
    <string name="loading_news">正在加载,请稍后(*^__^*)</string>
    <string name="no_thing">未设置内容</string>
    <string name="loading_happy">正在加载.....</string>
    <string name="linstenr">听笑话</string>
    <string name="name_tel">手机/邮箱/用户名</string>
    <string name="press">密码</string>
    <string name="load_up">登录</string>
    <string name="load">使用第三方账号登陆</string>
</resources>
