<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0">

    <include
        android:id="@+id/include"
        layout="@layout/title_include">

    </include>

    <View
        android:id="@+id/view_1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1dp"
        android:layout_below="@+id/include"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:background="@color/welcome_en">

    </View>

    <EditText
        android:id="@+id/name_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_1"
        android:background="@android:color/white"
        android:hint="@string/name_tel"
        android:inputType="phone"
        android:padding="@dimen/dimen_10dp"
        android:selectAllOnFocus="true"
        android:singleLine="true" />

    <View
        android:id="@+id/view_2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1dp"
        android:layout_below="@+id/name_ed"
        android:background="@color/umeng_socialize_text_time">

    </View>

    <EditText
        android:id="@+id/permiss_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_2"
        android:background="@android:color/white"
        android:hint="@string/press"
        android:inputType="textPassword"
        android:padding="@dimen/dimen_10dp"
        android:selectAllOnFocus="true"
        android:singleLine="true"

        />

    <View
        android:id="@+id/view_3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1dp"
        android:layout_below="@+id/permiss_ed"
        android:background="@color/umeng_socialize_text_time">

    </View>

    <Button
        android:id="@+id/load_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_3"
        android:layout_margin="@dimen/dimen_17dp"
        android:background="@drawable/load"
        android:text="@string/load_up"
        android:textColor="@android:color/white"
        android:textSize="@dimen/dimen_19sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/other_linear"
        android:layout_marginBottom="@dimen/dimen_10dp">

        <TextView
            android:id="@+id/other_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/load" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:layout_toLeftOf="@+id/other_textView"
            android:background="@color/umeng_socialize_text_ucenter">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:layout_toRightOf="@+id/other_textView"
            android:background="@color/umeng_socialize_text_ucenter">

        </TextView>

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/other_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/QQ"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/umeng_socialize_qq_on" />

        <ImageView
            android:id="@+id/QZONE"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/umeng_socialize_qzone_on" />

        <ImageView
            android:id="@+id/SINA"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/umeng_socialize_sina_on" />


    </LinearLayout>

</RelativeLayout>